Fixed home projects on mobile; Added scroll reveal.

--- a/src/assets/css/util.scss
+++ b/src/assets/css/util.scss
@@ -4,14 +4,17 @@
 
 .full-row {
   height: 100vh;
+  overflow: hidden;
 }
 
 .half-row {
   height: 50vh;
+  overflow: hidden;
 }
 
 .quarter-row {
   height: 25vh;
+  overflow: hidden;
 }
 
 .colors-1 {
